syntax = "proto3";
package com.ajax.springcourse.grpc;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


message CarUpdateDto {
  string id = 1;
  string description = 2;
}

message CarReadDto {
  string id = 1;
  string brand = 2;
  string model = 3;
  int32 seats = 4;
  string description = 5;
}

message CarCreateDto {
  string brand = 1;
  string model = 2;
  int32 seats = 3;
  string description = 4;
}

service CarService {
  rpc findAll(stream google.protobuf.Empty) returns (stream CarReadDto) {}
  rpc findByModel(google.protobuf.StringValue) returns (stream CarReadDto) {}
  rpc create(CarCreateDto) returns (CarReadDto) {}
  rpc findById(google.protobuf.StringValue) returns (CarReadDto) {}
  rpc update(CarUpdateDto) returns (CarReadDto) {}
  rpc deleteAll(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}